@@ -32,6 +32,7 @@
 * Adding initial support for Passay (www.passay.org) password validation to the backend for full release during the 3.5.x stream
 * Adding ability to set password expiration period, default is to be disabled
 * Implement setPointValue in HistoricalDataPoint, save value unconditionally
+* Bugfix for repeatedly saving the Point Hierarchy creating many data point listeners
 
 *Version 3.4.5*
 * Content Security Policy (CSP) is now disabled by default and the configuration options have changed, please review the new setting names and update your env.properties file if you want to continue using CSP
